--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,7 @@
 # compiler:
 #   - clang++
 #   - g++
-image:
-  - ubuntu
+image: ubuntu
 
 before_script:
   - apt-get install liblzma-dev libbz2-dev libnlopt-dev libz-dev
