--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@
 image: ubuntu
 
 before_script:
-  - sudo apt-get install liblzma-dev libbz2-dev libnlopt-dev libz-dev
+  - apt-get update
+  - apt-get install liblzma-dev libbz2-dev libnlopt-dev libz-dev
   - git clone git://github.com/samtools/htslib.git
   - cd htslib;make;cd ..
   
