--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@
 image: ubuntu
 
 before_script:
-  - apt-get update -qq && apt-get install -y liblzma-dev libbz2-dev libnlopt-dev libz-dev git g++
+  - apt-get update -qq && apt-get install -y liblzma-dev libbz2-dev libnlopt-dev libz-dev git g++ build-essential
   - git clone git://github.com/samtools/htslib.git
   - cd htslib;make;cd ..
   
