--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,7 @@ before_script:
   - git clone git://github.com/samtools/htslib.git
   - cd htslib;make;cd ..
   
-test:
-  script: 
-    - make
+script: 
+  - make -f Makefile
   
   
