--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,8 @@ before_script:
   - git clone git://github.com/samtools/htslib.git
   - cd htslib;make;cd ..
   
-script: 
-  - make -f Makefile
+my_deammeth_test:
+  script: 
+    - make -f Makefile
   
   
