--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@
 image: node:latest
 before_script:
   - echo `pwd`
-  - apt-get update -qq && apt-get install -y liblzma-dev libbz2-dev libnlopt-dev libz-dev git g++ build-essential
+  - apt-get update -qq && apt-get install -y liblzma-dev libbz2-dev libnlopt-dev libz-dev git g++ build-essential cmake
   - git clone git://github.com/samtools/htslib.git
   - cd htslib;make;cd ..
 
