--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,11 +6,8 @@
 image: node:latest
 before_script:
   - echo `pwd`
-  - apt-get update -qq && apt-get install -y liblzma-dev libbz2-dev libnlopt-dev libz-dev git g++ build-essential cmake
-  - git clone git://github.com/samtools/htslib.git
-  - cd htslib;make;cd ..
+  - apt-get update -qq && apt-get install -y liblzma-dev libbz2-dev libz-dev git g++ build-essential cmake
 
-  
 my_deammeth_test:
   script: 
     #- find . 
