--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,15 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: get submodules
+        run: git submodule update --init --recursive
 
+      - name: dependencies
+        run:
+          sudo apt-get install -y liblzma-dev libbz2-dev libz-dev git g++ build-essential cmake libcurl4-openssl-dev
+      
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: compile dammet
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          make
+          make test
