--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
         run: git submodule update --init --recursive
 
       - name: dependencies
-        run:
+        run: |
+          sudo apt-get update
           sudo apt-get install -y liblzma-dev libbz2-dev libz-dev git g++ build-essential cmake libcurl4-openssl-dev
       
       # Runs a set of commands using the runners shell
